# swap

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  swap.md
.github/workflows/: semi-linear.yml  workflow.yml
assets/: app.js  ffo_problems.txt  index.html  styles.css  xot.json
src/: board.rs  main.rs  position.rs
src/bot/: mod.rs  random.rs  squared.rs
src/bot/edax/: bot.rs  const.rs  eval.rs  midgame.rs  mod.rs  move.rs  node.rs  search.rs  search_state.rs  square.rs  weights.rs
src/bot/squared/: bot.rs  endgame.rs  midgame.rs  mod.rs
src/collections/: empties_list.rs  forward_pool_list.rs  hashtable.rs  mod.rs  move_list.rs  pool_list.rs
src/frontend/: app.rs  game.rs  mod.rs  websocket.rs
src/frontend/static/: app.js  index.html
src/othello/: board.rs  count_last_flip.rs  count_stable.rs  ffo_problems.rs  game.rs  get_flipped.rs  get_moves.rs  mod.rs  position.rs  squares.rs
src/othello/do_move/: edax_bitscan.rs  edax_slow.rs  mod.rs  simple.rs
src/othello/get_flipped/: edax_bitscan.rs  edax_slow.rs  mod.rs  simple.rs
static/: app.js  index.html
