[package]
name = "swap"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true      # enable link time optimization
panic = "abort" # removes panic unwinding code
strip = true    # strips symbols from binary

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
serde_json = "1.0"
lazy_static = "1.5.0"
rand = "0.8.5"
futures = "0.3"
async-trait = "0.1.83"
tokio-tungstenite = "0.18"
tungstenite = "0.18"
rayon = "1.10.0"
